--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dependencies": {
         "aws-sdk": "^2.999.0",
         "gun": "git+https://github.com/amark/gun.git",
-        "node-fetch": "^3.0.0",
-        "public-ip": "^4.0.4"
+        "node-fetch": "^3.0.0"
     },
     "scripts": {
         "start": "node main.js",
